--- a/config/test.cfg
+++ b/config/test.cfg
@@ -1,5 +1,5 @@
 # doom.wad or freedoom1.wad
-doom_scenario_path = freedoom1.wad
+doom_scenario_path = doom.wad
 doom_map = E1M1
 
 # 1 minutes = 1 * 60 * 35
